login uppy upload

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -79,7 +79,8 @@
       "profile": "Profile",
       "blank": "Blank",
       "mainMenu": "Main Menu",
-      "subMenu": "Sub Menu"
+      "subMenu": "Sub Menu",
+      "intake": "Intake Form"
     }
   },
   "footer": {
