added lookups & job filters

--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -79,7 +79,7 @@
       "profile": "Profile",
       "blank": "Blank",
       "mainMenu": "Main Menu",
-      "subMenu": "Sub Menu"
+      "subMenu": "Jobs"
     }
   },
   "footer": {
