role based menu

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -79,8 +79,10 @@
       "profile": "Profile",
       "blank": "Blank",
       "mainMenu": "Main Menu",
-      "subMenu": "Jobs",
-      "intake": "Intake Form"
+      "adminjobs": "Jobs",
+      "clientjobs": "Jobs",
+      "upload": "Upload",
+      "clientlist": "Clients"
     }
   },
   "footer": {
