user preferences save/update

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -40,7 +40,7 @@
       "notes": "Notes",
       "activity": "Activity",
       "timeline": "Timeline",
-      "settings": "Settings"
+      "preferences": "Preferences"
     }
   },
   "header": {
