change password, clients list changes

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -40,7 +40,8 @@
       "notes": "Notes",
       "activity": "Activity",
       "timeline": "Timeline",
-      "preferences": "Preferences"
+      "preferences": "Preferences",
+      "changepassword": "Change Password"
     }
   },
   "header": {
